# Spore

./: .env  .gitignore  LICENSE  README.md  build_installer.bat  config.json  main.py  main_entry.py  pyproject.toml  requirements.txt  spore_backend.spec  start_log_monitor.bat
AutoAgent/: __init__.py  character_selector.py  mode_selector.py  supervisor.py
analysis/: algorithm-recovery.md  deobfuscation.md  driver-analysis.md  firmware-analysis.md  protocol-reverse.md
base/: __init__.py  agent_database.py  agent_process.py  agent_types.py  character_manager.py  chat_process.py  cli_commands.py  client.py  config.py  conversation_loop.py  event_signal.py  interrupt_handler.py  ipc_manager.py  log_monitor.py  logger.py  memory_manager.py  multi_agent_monitor.py  prompt_loader.py  rule_reminder.py  state_manager.py  todo_manager.py  tools.py
base/text_protocol/: __init__.py  action_parser.py  protocol_manager.py  result_formatter.py  tool_doc_generator.py
base/utils/: __init__.py  characters.py  encoding.py  env.py  grep.py  json_utils.py  path_validator.py  python_exec.py  shell.py  skills.py  system_io.py  terminal.py  token_counter.py  web_browser.py
characters/: Character模板.txt  Data Analyst.md  Interview coaching.md  Malware analyst.md  Python experts.md
desktop_app/: __init__.py  resource_manager.py
desktop_app/backend/: __init__.py  confirm_manager.py  (+4 more)
desktop_app/frontend/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/frontend/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  BUILD.md  CLI.md  CONFIGURATION.md  FRONTEND.md  SILVERFOX.md  SKILLS.md
prompt/: Coder_prompt.md  FileContentAnalyzer_prompt.md  TextEditor_prompt.md  WebInfoCollector_prompt.md  character_selector_prompt.md  model_prompt.md  prompt.md  supervisor_prompt.md
skills/: agent_skills_spec.md
(+116 files in other folders)
