[project]
name = "spore-ai-agent"
version = "1.0.0"
description = "Spore AI Agent backend and desktop support services"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.51.0",
  "anthropic>=0.40.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.0",
  "tiktoken>=0.7.0",
  "colorama>=0.4.6",
  "pyperclip>=1.8.0",
  "pywin32>=306; sys_platform == 'win32'",
  "docxtpl>=0.16.7",
  "python-docx>=0.8.11",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "ddgs>=0.6.0",
  "fastapi>=0.109.0",
  "uvicorn>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.0.0",
  "psutil>=5.9.0",
  "pyinstaller>=6.0.0",
]

[tool.uv]
package = false
