[package]
name = "spore-desktop"
version = "1.0.0"
description = "Spore AI Agent Desktop Application"
authors = ["Spore Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-set-size", "window-set-min-size", "window-set-max-size", "window-start-dragging", "window-close", "window-unmaximize", "window-minimize", "window-set-icon", "window-hide", "window-set-title", "window-set-fullscreen", "window-set-always-on-top", "window-maximize", "window-set-decorations", "window-set-position", "window-show", "window-set-resizable", "window-unminimize", "window-set-skip-taskbar", "window-set-focus", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
window-vibrancy = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
